# dataframe-benchmarking

./: .gitignore  Cargo.toml  compare.sh  datafusion.ipynb  pandas.ipynb  pyproject.toml
src/: main.py  main.rs
