[tool.poetry]
name = "dataframes-benchmarking"
version = "0.1.0"
description = "Comparing Python pandas to Rust datafusion"
authors = ["Hana Lee <hana@8thlight.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
jupyterlab = "^3.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
